argocd/clusters/interview-gitops-sks/applications/frontend/components/Middleware-temp-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: temp-auth
spec:
  basicAuth:
    secret: authsecret
