argocd/clusters/interview-gitops-sks/applications/frontend/components/IngressRoute-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`frontend.demo.nerdhome.at`)
      middlewares:
        - name: temp-auth
      services:
        - name: podinfo-frontend
          port: 9898
          scheme: http
  tls:
    secretName: frontend-demo-nerdhome-at-tls
